2009-07-20 Roman
- !!!!:/SYS, /SYS/TVariant, /SYS/TFunction: User's objects support is final added. Supported base object TVarObj and area object TAreaObj.
- !!!!:/DAQ/JavaLikeCalc: Full object and area types support is added. Realised access through ".prop" and "[prop]" methods.
    Realised object's functions support and call. The language unified for different types work by one virtual machine's commands.
- !!!!:/Special: Added function dbReqSQL() and messGet(), which used object-type return.
- FIX:/UI/VCAEngine: Trend's size of primitive "Diagram" is limited 1 second on lower.
- FIX:/UI/WebCfgD: The tree elements HTML encoding is added.
- FIX:/UI/WebVision: No updating current values of a trand's parameters of the primitive "Diagram" on tracing mode for current time is fixed.


2009-07-18 Roman
- FIX:/DAQ/ModBus: Restore connection counter is fixed for long controler's intervals.
- FIX:/DAQ/ModBus: EVAL setup on errors for RI and CI is fixed.


2009-07-14 Roman
- /DAQ/ModBus: Controller's start is made forced for broken connection.


2009-07-10 Roman
- !!:/Special/SystemTests: Interface translation to German is added by Irina Popkova.
- !!!!:/Transport, /DAQ/ModBus, /Protocol/SelfSystem, /Transport/*: Individual output transport lock mechanism is added.
    Used for monopoly accessing to transport by protocols not lock all protocol.


2009-07-09 Maxim
- FIX:/UI/WebVision: Selecting the figures for the fill comparing their 'start' and 'end' points is fixed and modified for primitive ElFigure.
- FIX:/UI/Vision: Initialization of variables geomH, geomW is added  for primitive ElFigure.


2009-07-09 Roman
- !!:/Transport/Serial: Interface translation to German is added by Irina Popkova.
- FIX:/SYS: Crash on zero period is fixed into function TSYS::taskSleep().
- /DAQ/DAQGate: Early connection restoring after redundant using disable is added.
- !:/DAQ/DAQGate: Independent requests support is added for diferent controllers and one station.