@@ -3,8 +3,9 @@
 if [ ! -d ~/.openscada ]; then
     install -m 755 -d ~/.openscada/DATA ~/.openscada/ARCHIVES/{MESS,VAL}
     ln -s /var/spool/openscada/icons ~/.openscada/icons
-    install -m 644 /etc/oscada_start.xml ~/.openscada/oscada.xml
 fi
+
+if [ ! -e ~/.openscada/oscada.xml ]; then install -m 644 /etc/oscada_start.xml ~/.openscada/oscada.xml; fi
 
 cd ~/.openscada
 openscada --Config=./oscada.xml $@
