@@ -1,3 +1,7 @@
+2009-07-21 Roman
+- FIX:/SYS/TVariant: Some functions fixes for Array.
+
+
 2009-07-20 Roman
 - !!!!:/SYS, /SYS/TVariant, /SYS/TFunction: User's objects support is final added. Supported base object TVarObj and area object TAreaObj.
 - !!!!:/DAQ/JavaLikeCalc: Full object and area types support is added. Realised access through ".prop" and "[prop]" methods.
